story #11458 - fix logbook backup and clean api